--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -3,3 +3,15 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.list-container {
+  margin-left: 20px;
+  width: 100%;
+  height: 100%;
+  /* display: grid;
+  grid-template-columns: repeat(4, 300px);
+  grid-auto-rows: 200px;
+  grid-gap: 20px; */
+  display: flex;
+  flex-wrap: wrap;
+}
