--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -5,7 +5,8 @@ body {
 }
 
 .list-container {
-  margin-left: 20px;
+  padding: 0 10px;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
   /* display: grid;
@@ -14,4 +15,5 @@ body {
   grid-gap: 20px; */
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
