--- a/pokedex/src/components/Pagination/pagination.css
+++ b/pokedex/src/components/Pagination/pagination.css
@@ -7,7 +7,6 @@
   height: 2rem; */
   display: flex;
   justify-content: center;
-
 }
 
 .page-number {
@@ -21,12 +20,12 @@
   border-radius: 50%;
 }
 
-.page-number:hover {
-  color: red;
-}
-
 .page-link {
   text-decoration: none;
   font-weight: bold;
+}
+
+.page-link:hover {
+  color: lightcoral;
 }
 
