--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -4,6 +4,11 @@ body {
   padding: 0;
 }
 
+.container {
+  position: relative;
+  display: inline-block;
+}
+
 .list-container {
   padding: 0 10px;
   overflow-x: hidden;
