Completed Detail compo's adding/removing feature.

--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -5,8 +5,11 @@ body {
 }
 
 .container {
-  position: relative;
-  display: inline-block;
+  height: 100%;
+  overflow: auto;
+  float: right;
+  transition: width .35s;
+  width: 100%;
 }
 
 .list-container {
