--- a/pokedex/src/components/Details/details.css
+++ b/pokedex/src/components/Details/details.css
@@ -1,24 +1,25 @@
 .details-container {
-
-  width: 360px;
+  /* width: 360px; */
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: center;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.3);  border-radius: 44px;
   margin-left: 50px;
-  
-  position: fixed;
-  top: 0;
-  /* right: -100%; */
-  transition: 850ms;
+  height: 100%;
+  overflow: auto;
+  float: right;
+  transition: width .35s;
 }
 
-.details-container.active {
-  right: 0;
-  transition: 350ms;
+#details-container.collapsed {
+  width: 0;
 }
 
+#details-container.collapsed + #container {
+  width: 100%;
+}
 
 .details-cover{
   display: flex;
