--- a/pokedex/src/components/Post/post.css
+++ b/pokedex/src/components/Post/post.css
@@ -77,6 +77,7 @@
   border: none;
   border-radius: 15px;
   margin: 20px;
+  cursor: pointer;
   -webkit-box-shadow: 1px 2px 3px 3px rgba(0,0,0,0.25); 
   box-shadow: 1px 2px 3px 3px rgba(0,0,0,0.25);
 }
