--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -4,13 +4,19 @@ body {
   padding: 0;
 }
 
+.App {
+  display: flex;
+}
+
 .container {
   height: 100%;
   overflow: auto;
-  float: right;
+  float: left;
   transition: width .35s;
   width: 100%;
 }
+
+
 
 .list-container {
   padding: 0 10px;
