--- a/pokedex/src/components/Details/details.css
+++ b/pokedex/src/components/Details/details.css
@@ -1,25 +1,16 @@
 .details-container {
-  /* width: 360px; */
-  width: 30%;
+  width: 360px;
+  /* width: 30%; */
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: center;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.3);  border-radius: 44px;
-  margin-left: 50px;
   height: 100%;
-  overflow: auto;
-  float: right;
   transition: width .35s;
+  margin: 150px 20px 0 20px;
 }
 
-#details-container.collapsed {
-  width: 0;
-}
-
-#details-container.collapsed + #container {
-  width: 100%;
-}
 
 .details-cover{
   display: flex;
@@ -29,7 +20,6 @@
   width: 100%;
   color: white;
   border-radius: 44px 44px 0 0;
-
 }
 .detail-img {
   width: 140px;
