--- a/pokedex/src/components/Details/details.css
+++ b/pokedex/src/components/Details/details.css
@@ -49,6 +49,11 @@
   margin-bottom: 20px;
 }
 
+.capture-information{
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
  /* Capture Button */
  .capture-button {
   border: none;
