--- a/pokedex/src/components/Header/header.css
+++ b/pokedex/src/components/Header/header.css
@@ -14,13 +14,15 @@
   color: white;
   background: red;
   height: 72px;
-  width: 420px;
+  /* width: 420px; */
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   border-radius: 50px;
   font-size: 36px;
-  font-weight: 590;
+  font-weight: 600;
+  text-decoration: none;
+  padding-right: 10px;
 }
 
 .header-button img {
