--- a/pokedex/src/components/Post/post.css
+++ b/pokedex/src/components/Post/post.css
@@ -69,8 +69,8 @@
 
 .post-container {
   display: flex;
-  height: 200px;
-  width: 300px;
+  height: 265px;
+  width: 333px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -92,19 +92,31 @@
 
 .post-text {
   width: 100%;
+  height: 100%;
   border-top: 1px black solid;
   font-size: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
   align-items: start;
   background: white;
   border-radius: 0 0 15px 15px;
 }
 
-.post-text p {
+.post-text h1 {
+  font-size: 28px;
   margin: 0;
-  padding: 0 0 0 20px;
+  padding: 0;
+  margin-left: 20px;
+}
+
+.post-text p {
+  font-weight: light;
+  font-size: 24px;
+  color: #828282;
+  margin: 0;
+  padding: 0;
+  margin-left: 20px;
 }
 
 
