--- a/pokedex/src/Pages/capturedpokemon.css
+++ b/pokedex/src/Pages/capturedpokemon.css
@@ -12,3 +12,22 @@
   background: rgba(224, 224, 224, 0.3);
   margin: 0 80px;
 }
+
+.mobile-capturedPokemon-title {
+  display: none;
+  text-align: center;
+  font-size: 20px;
+  /* font-weight: bold; */
+}
+
+@media (max-width: 750px) {
+  .captured-pokemon-container header {
+    display: none;
+  }
+  .mobile-capturedPokemon-title {
+    display: block;
+  }
+  .titles {
+    display: none;
+  }
+}
