--- a/pokedex/src/components/capRow/capRow.css
+++ b/pokedex/src/components/capRow/capRow.css
@@ -38,9 +38,48 @@
   margin: 0;
 }
 
+/* .row-item-container {
+  display: flex;
+  justify-content: space-between;
+} */
+
 .row-item {
   width: 200px;
   font-size: 28px;
   color: rgba(51, 51, 51, 1);
   margin-right: 60px;
+}
+
+.mobile-CapRow-container {
+  display: none;
+}
+
+@media (max-width: 750px) {
+  .CapRow-container {
+    display: none;
+  }
+  .mobile-CapRow-container{
+    display: visible;
+    margin: 20px;
+    box-shadow: 0px 8px 16px 4px rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    border-radius: 16px;
+  }
+  .CapRow-image {
+    width: 75px;
+    height: 75px;
+    border-radius: 16px 0 0 16px;
+  }
+
+  .row-item {
+    width: 250px;
+    margin: 0;
+    font-size: 16px;
+    color: rgba(130, 130, 130, 1);
+  }
+  #mobile-CapRow-title {
+    font-size: 20px;
+    font-weight: bold;
+  }
 }
