--- a/pokedex/src/Pages/capturedpokemon.css
+++ b/pokedex/src/Pages/capturedpokemon.css
@@ -1,3 +1,9 @@
+.captured-pokemon-container {
+  margin: 3% 5%;
+}
+
+
+
 .captured-area {
   /* display: grid;
   grid-template-columns: 300px repeat(4, 150px);
@@ -10,7 +16,9 @@
   display: flex;
   justify-content: space-between;
   background: rgba(224, 224, 224, 0.3);
-  margin: 0 80px;
+  margin: 40px 80px 0;
+  border-radius: 16px;
+  padding: 0 10px;
 }
 
 .mobile-capturedPokemon-title {
